--- a/overrides/main.html
+++ b/overrides/main.html
@@ -2,7 +2,8 @@
 
 <!-- https://squidfunk.github.io/mkdocs-material/setup/setting-up-the-header/#announcement-bar -->
 {% block announce %}
+<!--<center>This is a pre-release/test version, please report all issues to <a href="mailto:besthttp@gmail.com" >besthttp@gmail.com</a>!</center>-->
 <center>
-This is a pre-release/test version, please report all issues to <a href="mailto:besthttp@gmail.com" >besthttp@gmail.com</a>!
+    <a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96?aid=1101lfX8E">👻 PROMO JUMPSCARE 👻 🧛  To celebrate the s p o o k i e s t day of the year, Unity offers a 10.31% discount on all orders above $60! Get those vampiric zombie skeleghosts while you can 💀 Use code <b>SPOOKY1031</b> 🧟</a>
 </center>
 {% endblock %}
