Announce Unity server issues.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,7 +3,7 @@
 <!-- https://squidfunk.github.io/mkdocs-material/setup/setting-up-the-header/#announcement-bar -->
 {% block announce %}
 <!--<center>This is a pre-release/test version, please report all issues to <a href="mailto:besthttp@gmail.com" >besthttp@gmail.com</a>!</center>-->
-<center>
-    <a href="https://assetstore.unity.com/?price=19-20&on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">$20 Asset Sale: Get your new favorites for just $20 each</a>
-</center>
+
+<center style="color:red">There are some server issues currently affecting the Unity Asset Store. Please check <a href="https://status.unity.com">status.unity.com</a> for up to date status!</center></br>
+<center><a href="https://assetstore.unity.com/?price=19-20&on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Last chance to grab amazing assets for $20 each!</a></center>
 {% endblock %}
