--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center>Score Black Friday savings! <a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Save 50% on 300+ popular assets.</a> <a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Plus get up to 70% off Flash Deals!</a></center>
+  <!--center>Score Black Friday savings! <a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Save 50% on 300+ popular assets.</a> <a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Plus get up to 70% off Flash Deals!</a></center-->
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E"><img src="assets/images/CyberWeek-728x90.jpg"></img></a></center>
 {% endblock %}
