--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <!--center>Score Black Friday savings! <a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Save 50% on 300+ popular assets.</a> <a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Plus get up to 70% off Flash Deals!</a></center-->
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E"><img src="assets/images/CyberWeek-728x90.jpg"></img></a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/best-of-2023?aid=1101lfX8E">SAVE UP TO 95%<br/>23 for $23 Mega bundle: Shop the best 23 tools, 3D assets, templates, and more from this year for only $23.</a></center>
 {% endblock %}
