--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/mega-bundles/best-of-2023?aid=1101lfX8E">SAVE UP TO 95%<br/>23 for $23 Mega bundle: Shop the best 23 tools, 3D assets, templates, and more from this year for only $23.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">New Year Sale: Save 50% on 2,000+ assets<br/>Plus, get an extra 10% off orders over $100 with code NYS10</a></center>
 {% endblock %}
