Changed call to action text to sound better.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">New Year Sale: Save 50% on 2,000+ assets<br/>Plus, get an extra 10% off orders over $100 with code NYS10</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">New Year Sale: Save 50% on Over 2,000 Assets!<br/>Plus, Enjoy an Extra 10% Off on Orders Over $100 with Code <strong>NYS10</strong>.</a></center>
 {% endblock %}
