Unity Awards Asset Sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/publisher-sale&aid=1101lfX8E">Publisher of the week: Save 50% on AK STUDIO ART<br/>Plus, get a free gift.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Unity Awards Asset Sale: Save 50% on award winning assets.</a></center>
 {% endblock %}
