Link for Lunar New Year bundle sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Unity Awards Asset Sale: Save 50% on award winning assets.</a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/lunar-new-year-2024?aid=1101lfX8E">The Fantasy Lunar New Year bundle is only $30! Save up to 95% off.</a></center>
 {% endblock %}
