Fresh Asset Sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/mega-bundles/lunar-new-year-2024?aid=1101lfX8E">The Fantasy Lunar New Year bundle is only $30! Save up to 95% off.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Save 50%!<br/>Shop the latest top assets, including tools, animations, 3D models, textures, and more.</a></center>
 {% endblock %}
