Last days of the sale.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Save 50%!<br/>Shop the latest top assets, including tools, animations, 3D models, textures, and more.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Last days of the Spring Fresh Asset Sale!<br/>Save 50% from the latest top assets, including tools, animations, 3D models, textures, and more.</a></center>
 {% endblock %}
