Changed publisher of the Week.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/publisher-sale?aid=1101lfX8E">Publisher of the week: Save 50% on Brooklyn Game Audio<br/>Plus, get a free gift</a></center>
+  <center><a href="https://assetstore.unity.com/publisher-sale?aid=1101lfX8E">It’s the Publisher of the Week: All Stars sale! Get five free gifts with code ALLSTARS2023 and save 50% on assets from top publishers.</a></center>
 {% endblock %}
