--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/publisher-sale?aid=1101lfX8E">It’s the Publisher of the Week: All Stars sale! Get five free gifts with code ALLSTARS2023 and save 50% on assets from top publishers.</a></center>
+  <center><a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Now up to 70% off: Assets to help prototype games faster. New deals are added every 24 hours.</a></center>
 {% endblock %}
