--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Now up to 70% off: Assets to help prototype games faster. New deals are added every 24 hours.</a></center>
+  <center><a href="https://assetstore.unity.com/packages/tools/network/the-ultimate-best-bundle-268840&aid=1101lfX8E">Unlock the Power of Possibilities with 'The Ultimate Best Bundle' – Now 50% Off! Grab the Ultimate Toolbox for Your Unity Projects Today!</a></center>
 {% endblock %}
