--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/packages/tools/network/the-ultimate-best-bundle-268840?aid=1101lfX8E">Unlock the Power of Possibilities with 'The Ultimate Best Bundle' – Now 50% Off! Grab the Ultimate Toolbox for Your Unity Projects Today!</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get 50% off tons of amazing assets to help you build your 3D games.</a></center>
 {% endblock %}
