--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get 50% off tons of amazing assets to help you build your 3D games.</a></center>
+  <center><a href="https://assetstore.unity.com/?price=1-20&on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get up to 75% off tons of high-quality assets to help you along your game development journey – for only $20 each.</a></center>
 {% endblock %}
