--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Save 50% on 300+ top assets and up to 70% on Flash Deals.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&flashdeals=true&orderBy=1&aid=1101lfX8E">Save 50% on 300+ top assets and up to 70% on Flash Deals. New assets added daily.</a></center>
 {% endblock %}
