New catch phrase for 30 for $30.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/mega-bundles/30-for-30?aid=1101lfX8E">30 for $30 Mega Bundle</a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/30-for-30?aid=1101lfX8E">The 30 for $30 Mega Bundle is back! Get a new collection of tools and art for 97% off.</a></center>
 {% endblock %}
