--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?price=30-35&on_sale=true&orderBy=1&aid=1101lfX8E">Get popular 3D, GUI, and animation tool assets for just $35.  Plus, get an extra 10% off when you spend $60 or more with the code JUNE10OFF.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Create gaming magic with immersive VFX, particle systems, shaders, audio, and more at <b>50% off</b>.</a></center>
 {% endblock %}
