--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Create gaming magic with immersive VFX, particle systems, shaders, audio, and more at <b>50% off</b>.</a></center>
+  <center><a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Save up to 60% for a limited time – this sale will be gone in a flash!</a></center>
 {% endblock %}
