--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?flashdeals=true&aid=1101lfX8E">Save up to 60% for a limited time – this sale will be gone in a flash!</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">First week: <strong>Save 50%</strong> on the summer’s hottest assets chosen by top creators</a></center>
 {% endblock %}
