Week 2 of summer sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">First week: <strong>Save 50%</strong> on the summer’s hottest assets chosen by top creators</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Week 2: Get <strong>50% off</strong> popular prototyping assets, selected by top creators</a></center>
 {% endblock %}
