Top picks sale.

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Week 3: <strong>Get 50% off</strong> popular assets perfect for VR and AR, DOTS, the new Input System, and more – all selected by top creators.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Best of the dev days of summer. Save 50% of top piks!</a></center>
 {% endblock %}
