--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Best of the dev days of summer. Save 50% of top picks!</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Surprise Surprise! Yet another <strong>50% off</strong> sale. Plus, get an extra 10% off all orders over $60 with code <strong>SEP10BER</strong>.</a></center>
 {% endblock %}
