--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/unite?aid=1101lfX8E">Unite is here. Get a sneak peek at what’s next, uplevel your skills, and celebrate the Unity community.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get an extra 10% off all orders over $60 with code <strong>SEP10BER</strong>.</a></center>
 {% endblock %}
