--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/mega-bundles/unity-6-toolkit/?aid=1101lfX8E">Get up 97% off top art assets for Unity 6.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Over 200+ assets at $20 or less for a limited time.</a></center>
 {% endblock %}
