Black Friday Sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?flashdeals=true&on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Starting soon: Get 50% off on Black Friday. Plus, get up to 70% off Flash Deals. Save on 300+ popular assets.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Score big savings on Black Friday | Shop 50% off</a></center>
 {% endblock %}
