24 for 24 mega bundle

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Cyber Week on now: Best of Black Friday + new additions | Shop 50% off</a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/24-for-24?aid=1101lfX8E">24 for $24 Mega Bundle | Get up to 97% off the top assets released in 2024.</a></center>
 {% endblock %}
