--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?aid=1101lfX8E">95% off: Fantasy, Reality, Beyond: Triple Mega Bundle Sale</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Grab over 200 assets and tools for just $20 each—limited-time savings you don’t want to miss!</a></center>
 {% endblock %}
