Mega Bundle – Must-Have New Assets Sale

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?aid=1101lfX8E">Spring sale is live! Save up to 70% off on the best deals.</a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/must-have-new?aid=1101lfX8E">Mega Bundle – Must-Have New Assets</a></center>
 {% endblock %}
