--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?orderBy=1&rows=96&aid=1101lfX8E">Save on everything—from cutting-edge tools and game templates to stunning art! Use code <strong>JUNE202510OFF</strong> at checkout to get 10% off orders over $50.</a></center>
+  <center><a href="https://assetstore.unity.com/?aid=1101lfX8E">Jumpstart Your Game Dev for Just $2</a></center>
 {% endblock %}
