--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?aid=1101lfX8E">Jumpstart Your Game Dev for Just $2</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Unity Summer Sale - save 70% on daily Flash Deals!</a></center>
 {% endblock %}
