--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Unity Summer Sale - 50% Off + Flash Deals 70% Off!</a></center>
+  <center><a href="https://assetstore.unity.com/publisher-sale?aid=1101lfX8E">Save 50% on assets and get a free gift in this week’s Publisher Sale.</a></center>
 {% endblock %}
