Fresh assets fall edition

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get extra 10% off all orders over $50 at checkout with code SEPT2025.</a></center>
+  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Discover 250+ of the newest and popular assets—now half off!</a></center>
 {% endblock %}
