Code Monkey’s 25 for $25 bundle

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block announce %}
-  <center><a href="https://assetstore.unity.com/?on_sale=true&orderBy=1&rows=96&aid=1101lfX8E">Get 50% off on Black Friday. Plus, get up to 95% off Flash Deals!</a></center>
+  <center><a href="https://assetstore.unity.com/mega-bundles/code-monkey-bundle?aid=1101lfX8E">FOR A LIMITED TIME - Get Code Monkey’s 25 for $25 bundle</a></center>
 {% endblock %}
